# level-thumbs-mod

./: .gitignore  CMakeLists.txt  Noktra  README.md  about.md  changelog.md  mod.json
.github/workflows/: multi-platform.yml  release.yml
resources/: submission_rules.md
src/: ImageCache.cpp  ImageCache.hpp  LevelInfoLayerHook.cpp  LoadingOverlay.cpp  LoadingOverlay.hpp  SubmitThumbnail.cpp  SubmitThumbnail.hpp  ThumbnailPopup.cpp  ThumbnailPopup.hpp  Zoom.cpp  Zoom.hpp  main.cpp  utils.cpp  utils.h  utils.hpp
src/hooks/: LevelCell.cpp  LevelInfoLayer.cpp  PauseLayer.cpp  ProfilePage.cpp  ProfilePageHook.cpp
src/layers/: ConfirmAlertLayer.hpp  LoadingOverlay.cpp  LoadingOverlay.hpp  ThumbnailPopup.cpp  ThumbnailPopup.hpp
src/managers/: AuthManager.cpp  AuthManager.hpp  SettingsManager.cpp  SettingsManager.hpp  ThumbnailManager.cpp  ThumbnailManager.hpp
src/setting/: LinkAccount.cpp  ModActions.cpp
src/utils/: AsyncTask.hpp  Downloader.hpp  MegaHackCompat.hpp  ModNodeCompat.hpp  NodeHider.hpp  RenderTexture.cpp  RenderTexture.hpp  SubmissionNotes.hpp  UrlEncode.hpp
